[package]
name = "kyopro"
version = "1.0.0"
edition = "2021"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
permutohedron = "=0.2.4"
